# c-toolchain

./: README.md  cmake_config.bat  config_cmake.json
arm-none-eabi-cm3/: arm-none-eabi-toolchain.cmake  env.bat  linker_script.ld  startup.s
prj/: CMakeLists.txt  README.md
prj/inc/: main.h
prj/src/: main.c
